Fix small spacing after parallax

--- a/src/styles/parallax.scss
+++ b/src/styles/parallax.scss
@@ -27,6 +27,7 @@
     width: 100%;
     position: absolute;
     height: 10px;
+    content: '';
     left: 0;
     bottom: 0;
     transform: translateY(100%);
